# macman

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.sh  main.cpp
.github/workflows/: macos.yml
include/: macman.hpp
include/backend/: aur_backend.hpp  homebrew_backend.hpp
include/cli/: argument_parser.hpp  colors.hpp
include/core/: checksum.hpp  config.hpp  database.hpp  i18n.hpp  installer.hpp  logger.hpp  package.hpp  process.hpp  remover.hpp  resolver.hpp  self_healing.hpp  transaction.hpp
include/net/: downloader.hpp  http_client.hpp
include/ui/: progress_bar.hpp
man/: macman.8
scratch/: fix_permissions.sh
scripts/completions/: _macman
src/backend/: aur_backend.cpp  aur_backend.cpp.rej  homebrew_backend.cpp
src/cli/: argument_parser.cpp
src/core/: checksum.cpp  config.cpp  database.cpp  i18n.cpp  installer.cpp  logger.cpp  package.cpp  process.cpp  remover.cpp  resolver.cpp  self_healing.cpp  transaction.cpp
src/net/: downloader.cpp  http_client.cpp
src/ui/: progress_bar.cpp
tests/: test_checksum.cpp  test_config.cpp  test_database.cpp  test_main.cpp  test_resolver.cpp
